[package]
name = "ra-solana-math"
version = "0.1.0"
edition = "2021"
description = "High-performance fixed-point arithmetic library optimized for Solana anchorlang programs"
license = "MIT"  # Or your preferred 
authors = ["Ra' <razzsense@gmail.com>"]
repository = "https://github.com/ra-sun-god/ra-solana-math"  # Optional
keywords = ["solana", "fixed-point", "math", "anchor", "defi"]
categories = ["mathematics", "cryptography", "finance"]
documentation = "https://docs.rs/ra-solana-math"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
uint =  { version = "0.8.5",  default-features = false } # For U256
anchor-lang = { version = ">=0.28.0", default-features = false }


[dev-dependencies]

[lib]
crate-type = ["lib"]
doctest = false


[features]
default = []
# Optional: no-entrypoint for non-Solana use
no-entrypoint = []
